KDesktopVirt/k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: kvirtualstage
  labels:
    name: kvirtualstage
    app.kubernetes.io/name: kvirtualstage
    app.kubernetes.io/part-of: kvirtualstage-platform
